plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.2'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'dev.assessment'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'

}

compileJava {
    options.compilerArgs << "-parameters"
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    testImplementation 'org.mockito:mockito-core:5.10.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.10.0'

    testImplementation 'org.mock-server:mockserver:5.15.0'
    testImplementation 'org.mock-server:mockserver-junit-jupiter:5.15.0'

    testImplementation 'org.awaitility:awaitility:3.0.0'
    testImplementation 'org.awaitility:awaitility-proxy:3.0.0'
}

tasks.named("bootJar") {
    archiveFileName = "app.jar"
}

tasks.named("jar") {
    enabled = false
}

tasks.named('test') {
    jvmArgs["-XX:+EnableDynamicAgentLoading"]
    useJUnitPlatform()
}
